# LuxScript

./: .eslintrc.js  README.MD  README.md  index.lx  package-lock.json  package.json
LuxScript/: GUI.lx  LuxScriptConfig.json  MAIN.js  MAIN.lx  README.MD  TODO.MD  drun.bat  errors.js  functions.js  index.cpp  lexer.js  main.ejs.js  package.json  run.bat  run.js  testrun.bat  untokenize.js
LuxScript/Command/: command.bat  index.py  pyproject.toml  setup.py
LuxScript/Command/lx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
LuxScript/Functions/: Circle.js  SwitchCase.js  Webserver.js
LuxScript/Gui/: gui.py
LuxScript/Lexer/: keywords.js  operators.js  punctuation.js  token.js  tokentype.js
LuxScript/LuxScript/: MAIN.js  errors.js
LuxScript/LuxScript/Command/: program.py
LuxScript/LuxScript/Lexer/: keywords.js
LuxScript/LuxScript/Transfer/: cppvar.lxt  main.lxt  transferTitle.lxt
LuxScript/TinyLux/: index.js  index.tyl.js
LuxScript/Transfer/: cppvar.lxt  gui.lxt  lx.lxt  main.lxt  transferLogo.lxt
LuxScript/WebGui/: index.html
LuxScript/src/: TODO.md  command.js  command.py  functions.mjs  index.cs  index.mjs  index.py  lexer.js  run.bat  test.js  testrun.js  transfer.lxt
Scripts/: Calculate.lx  Circle.lx  index.lx  index.sms  test.sms
SmokeScript/: README.MD  SmokeScriptConfig.json  drun.bat  run.bat  testrun.bat
SmokeScript/src/: GoodingList.md  TODO.md  creators.txt  downloadCreators.js  functions.mjs  index.c  index.mjs  index.py  lexer.js  modules.js  run.bat  testrun.py  variables.mjs  welcome.js
