[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "program"
version = "0.1.0"
description = "My command-line tool"
authors = ["John Doe <john.doe@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
click = "^8.0.1"

[tool.poetry.scripts]
my-program = "program:main"